--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:cov": "jest --coverage --watchAll"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "lucide-react": "^0.390.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -38,12 +39,15 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fixed-jsdom": "^0.0.9",
+    "msw": "^1.3.5",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "whatwg-fetch": "^3.6.20"
   },
   "jest": {
     "testEnvironment": "jsdom",
