--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.8.4",
     "lucide-react": "^0.390.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
