--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.8.4",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.390.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.4.1"
