--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+
+    /* This will inform TypeScript to include the type definitions from @testing-library/jest-dom
+    "types": ["@testing-library/jest-dom"],
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
